# Insomnihack2024

./: .gitignore  README.md
bypass-by-uploading-a-native-library/: README.md  exploit-1-3.sh  exploit-2-3.sh  exploit-3-3.sh  pom.xml
bypass-using-instrumentation/: Dockerfile  README.md  demo_script.sh  exploit-instrumentation-bypass.py  run_server.sh
bypass-using-jni-injection/: README.md  demo_script.sh  pom.xml  redefine_process_builder.sh  redefine_spel_parser.sh  redefine_transformer_manager.sh
bypass-using-jshell-api/: README.md  exploit.sh
bypass-using-jshell-api/rasp-agent/: pom.xml
bypass-using-jvm-escape/: README.md  demo_script.sh  exploit.sh  pom.xml
bypass-using-memory-abuse/: Dockerfile  README.md  exploit-memory-abuse-bypass.py
bypass-using-process-injection/: CMakeLists.txt  README.md  exploit.sh  pom.xml  redefineProcessBuilder.cpp  redefineSpelExpressionParser.cpp  redefineTransformerManager.cpp
bypass-using-process-injection/src/main/java/com/applicationsec/: Main.kt
bypass-using-process-injection/src/main/resources/: application.properties
bypass-using-reflection-abuse/: Dockerfile  README.md  demo_script.sh  run_server.sh
bypass-using-unsafe-abuse/: Dockerfile  README.md  demo_script.sh  exploit.py  run_server.sh
bypass-using-unsafe-abuse/rasp-agent/: README.md  pom.xml
bypassing-using-memory-abuse/: Dockerfile  README.md
bypassing-using-reflection-abuse/: Dockerfile  README.md  exploit.py  pom.xml
bypassing-using-unsafe-abuse/: Dockerfile  README.md  exploit.py
rasp-agent/: README.md
(+23 files in other folders)
